--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,11 +8,19 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: Use variables
+      env:
+        MY_TOKEN: ${{ secrets.MY_TOKEN }}
+      shell: bash
       run: |
-        echo "repository variable : ${{ vars.REPOSITORY_VAR }}"
-        echo "organization variable : ${{ vars.ORGANIZATION_VAR }}"
-        echo "overridden variable : ${{ vars.OVERRIDE_VAR }}"
-        echo "variable from shell environment : $env_var"
-        echo "image repository : ${{ vars.IMAGE_REPOSITORY }}"
-        echo "github env : ${{ vars.GITHUB_ENV }}"
-
+        curl -s -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $MY_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/orgs/willin2/actions/variables > vars.json
+        while read variable; do
+            key=$(jq -r '.name' <<< $variable)
+            value=$(jq -r '.value' <<< $variable)
+            echo $key
+            echo $value
+            echo "$key=$value" >> $GITHUB_ENV
+        done <<< $(jq -c '.variables[]' vars.json)
