--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,19 +12,23 @@ jobs:
         MY_TOKEN: ${{ secrets.MY_TOKEN }}
       shell: bash
       run: |
-        curl -s -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $MY_TOKEN" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/orgs/willin2/actions/variables > vars.json
-        while read variable; do
-            key=$(jq -r '.name' <<< $variable)
-            value=$(jq -r '.value' <<< $variable)
-            echo $key
-            echo $value
-            echo "$key=$value" >> $GITHUB_ENV
-        done <<< $(jq -c '.variables[]' vars.json)
+        # curl -s -L \
+        #     -H "Accept: application/vnd.github+json" \
+        #     -H "Authorization: Bearer $MY_TOKEN" \
+        #     -H "X-GitHub-Api-Version: 2022-11-28" \
+        #     https://api.github.com/orgs/willin2/actions/variables > vars.json
+        # while read variable; do
+        #     key=$(jq -r '.name' <<< $variable)
+        #     value=$(jq -r '.value' <<< $variable)
+        #     echo $key
+        #     echo $value
+        #     echo "$key=$value" >> $GITHUB_ENV
+        # done <<< $(jq -c '.variables[]' vars.json)
+        echo "IMAGE_REPOSITORY=nginx" >> $GITHUB_ENV
+        echo "IMAGE_TAG=latest" >> $GITHUB_ENV
 
+    - name: echo GITHUB_ENV
+      run: echo $GITHUB_ENV
+      
     - name: cat values-DEV.yaml
       run: cat values-DEV.yaml
-      
